src/App.css
body {
  font-family: 'Ropa Sans', sans-serif;
  color: rgb(40, 56, 68);
}

.content {
  background-image: linear-gradient(to bottom, #0F2027, #203A43, #2C5364);
  height: 100vh;
}

.content-card {
  background-color: rgb(247, 248, 252);
  border-radius: 8px;
  height: 80vh;
  padding: 20px;
}

.btn-custom {
  background-color: white;
  border-color: #502c64;
  color: #502c64;
}

#balance {
  font-size: 4rem;
}

#balance:after {
  content: "";
  display: block;
  border-bottom: 3px solid rgb(195, 207, 216);
}

.avatar {
  width: 80%;
}

#friends {
  text-align: left;
}

.friend {

}

.friend:after {
  content: "";
  display: block;
  border-bottom: 2px solid rgb(195, 207, 216);
}

